fix to admin bar way too big with different themes.

--- a/css/style.css
+++ b/css/style.css
@@ -15,7 +15,6 @@
   border-bottom-color: #666;
   border-radius: 5px 5px 0 0;
   font-size: 0;
-  padding: 15px 3px;
   position: relative;
   height: 64px;
   font-family: "helvetica neue";
